# py-soildb

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SOIL_SCIENCE_REVIEW_PLAN.md  debug_pedons.py  demo_schema_system.py  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: .gitignore  _quarto.yml  api.qmd  async.qmd  awdb.qmd  error-handling.qmd  index.qmd  objects.json  quickstart.qmd  troubleshooting.qmd  tutorial.qmd  usage.qmd  workflows.qmd
docs/examples/: 01_basic.py  02_spatial.py  04_schema.py  05_awdb.py  06_awdb_availability.py  07_querybuilder.py  08_fetch.py  README.md
docs/src/soildb/: awdb.client.AWDBClient.qmd  awdb.convenience.discover_stations.qmd  awdb.convenience.discover_stations_nearby.qmd  awdb.convenience.find_stations_by_criteria.qmd  awdb.convenience.get_monitoring_station_data.qmd  awdb.convenience.get_property_data_near.qmd  convenience.get_mapunit_by_areasymbol.qmd  fetch.fetch_component_by_mukey.qmd  index.qmd  response.SDAResponse.qmd  spatial.bbox_query.qmd  spatial.point_query.qmd  spatial.spatial_query.qmd
examples/: 04_schema_inference.py  05_awdb_example.py  06_awdb_data_availability.py  08_fetch.py  08_metadata_discovery.ipynb  09_wss_download.py  soil_water_availability.qmd  spc_01_basic_conversion.py  spc_02_with_site_metadata.py  spc_03_lab_pedon_workflow.py  spc_04_custom_columns.py
examples/notebooks/: 01_metadata_discovery.ipynb
examples/soilprofilecollection/: 01_basic_conversion.py  02_with_site_metadata.py  03_lab_pedon_workflow.py  04_custom_columns.py
scripts/: awdb_data_quality_monitor.py  awdb_health_check.py  awdb_performance_test.py  awdb_schema_monitor.py  debug_hang.py  demo_schema_system.py  test_awdb_performance_benchmarking.py  test_simple_network.py  validate_examples.py
src/soildb/: __init__.py  awdb_integration.py  client.py  convenience.py  exceptions.py  fetch.py  high_level.py  metadata.py  models.py  query.py  query_templates.py  response.py  sanitization.py  schema_inference.py  schema_system.py  spatial.py  spc_presets.py  spc_validator.py  sync.py  type_conversion.py  type_processors.py  utils.py  wss.py
src/soildb/awdb/: __init__.py  client.py  convenience.py  exceptions.py  models.py
src/soildb/backends/: __init__.py  base.py  exceptions.py  geopackage_backend.py  response_adapter.py  schema.py  sda_backend.py  sqlite_backend.py  ssurgo_client.py  type_mapper.py
src/soildb/henry/: client.py  convenience.py
src/soildb/ldm/: __init__.py  backends.py  client.py  exceptions.py  query_builder.py  tables.py
src/soildb/schemas/: __init__.py  _base.py  _registry.py  chorizon.py
tests/: conftest.py  test_awdb.py  test_awdb_documentation.py  test_awdb_integration.py  test_awdb_performance.py  test_backends_infrastructure.py  test_backends_sda_sqlite.py  test_client.py  test_fetch.py  test_geopackage_backend.py  test_high_level.py  test_integration.py  test_ldm_backend_execution.py  test_ldm_exceptions.py  test_ldm_imports.py  test_ldm_query_builder.py  test_ldm_tables.py  test_public_api.py  test_query.py  test_response.py  test_sanitization.py  test_schema_inference.py  test_spatial_and_responses.py  test_spc_presets.py  test_spc_validator.py  test_ssurgo_client.py  test_sync.py  test_type_conversion.py  test_wss.py
